--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
     <module>Mybatis01</module>
       <module>Mybatis02</module>
       <module>mybatis03</module>
+      <module>mybatis04</module>
   </modules>
 
   <properties>
